--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,6 +3,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:vm="clr-namespace:Projekatv2.ViewModel"
+    NavigationPage.HasNavigationBar="False"
+    
     BackgroundColor="#F8F8F8">
 
     <!-- Resources -->
