--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,21 +2,23 @@
     x:Class="Projekatv2.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:vm="clr-namespace:Projekatv2.ViewModel"
-    NavigationPage.HasNavigationBar="False"
+    xmlns:binding="clr-namespace:Projekatv2.Binding"
+    NavigationPage.HasNavigationBar="False " BackgroundImageSource="pocetna.png"
     
     BackgroundColor="#F8F8F8">
 
     <!-- Resources -->
     <ContentPage.Resources>
         <ResourceDictionary>
-            <vm:CategoryToColorConverter x:Key="CategoryToColorConverter"/>
+            <binding:CategoryToColorConverter x:Key="CategoryToColorConverter"/>
         </ResourceDictionary>
     </ContentPage.Resources>
+   
+
 
     <!-- BindingContext -->
     <ContentPage.BindingContext>
-        <vm:HomeViewModel />
+        <binding:Home />
     </ContentPage.BindingContext>
 
     <ScrollView>
@@ -75,7 +77,7 @@
        FontSize="20"
        FontAttributes="Bold"
        TextColor="#1E3A8A"
-                   FontFamily="Poppins"
+                   FontFamily="Poppins" CharacterSpacing="0.5"
        Margin="10,5,0,0"/>
 
             <ScrollView Orientation="Horizontal" HorizontalScrollBarVisibility="Never">
@@ -101,6 +103,10 @@
                            BorderColor="#D1D5DB"  
                                     
                            >
+                                    <Frame.GestureRecognizers>
+                                        <TapGestureRecognizer Tapped="OnProductTapped"/>
+                                    </Frame.GestureRecognizers>
+
                                     <Grid>
                                         <!-- Gradient pozadina -->
                                         <Grid.Background>
@@ -185,10 +191,13 @@
             </ScrollView>
 
             <!-- LISTA PROIZVODA -->
-            <CollectionView ItemsSource="{Binding FilteredProducts}" SelectionMode="Single" SelectionChanged="OnProductSelected">
+            <CollectionView ItemsSource="{Binding FilteredProducts}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Frame CornerRadius="15" Padding="10" Margin="10,5" BackgroundColor="White" HasShadow="True">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="OnProductTapped"/>
+                            </Frame.GestureRecognizers>
                             <Grid ColumnDefinitions="90,*,100" RowDefinitions="Auto,Auto,Auto">
 
                                 <!-- Slika sa corner radius i gradient pozadina -->
