--- a/Views/FavouritesPage.xaml
+++ b/Views/FavouritesPage.xaml
@@ -2,13 +2,13 @@
     x:Class="Projekatv2.Views.FavouritesPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:vm="clr-namespace:Projekatv2.ViewModel"
+    xmlns:binding="clr-namespace:Projekatv2.Binding"
     xmlns:views="clr-namespace:Projekatv2.Views"
 
     Title="Favorites">
 
     <ContentPage.BindingContext>
-        <vm:HomeViewModel />
+        <binding:Home />
     </ContentPage.BindingContext>
 
     <CollectionView ItemsSource="{Binding FavoriteProducts}">
@@ -23,7 +23,7 @@
                             <Label Text="{Binding Price, StringFormat='{}{0} KM'}" FontAttributes="Bold" TextColor="#F4B400"/>
                         </VerticalStackLayout>
                         <Button Text="Ukloni" Grid.Column="2" BackgroundColor="#F4B400" TextColor="White" CornerRadius="15"
-                             Command="{Binding Source={RelativeSource AncestorType={x:Type vm:HomeViewModel}}, Path=ToggleFavoriteCommand}"
+                             Command="{Binding Source={RelativeSource AncestorType={x:Type binding:Home}}, Path=ToggleFavoriteCommand}"
                              CommandParameter="{Binding .}"/>
                     </Grid>
                 </Frame>
